--- a/.env .example
+++ b/.env .example
@@ -1,16 +1,16 @@
 NODE_ENV=development
-SERVER_PORT=3000
+SERVER_PORT=
 DATABASE_TYPE=mongodb
 MONGODB_CONNECTION_STRING=mongodb://0.0.0.0:27017
 DATABASE_PORT=
 DATABASE_USERNAME=
 DATABASE_PASSWORD=
 DATABASE_NAME=cms
-DATABASE_CONNECTION_TIME_OUT=150000
-DATABASE_ACQUIRE_TIME_OUT=150000
-DATABASE_CONNECTION_LIMIT=20
-CRYPTO_SECRET=vAAA6sdmpNWjPPKqCc7rdxs09lwHzfr3
-CRYPTO_IV=01d9814fbe2b69cc44997135734eca75
-CRYPTO_ALGORITHM=aes-256-ctr
-JWT_SECRET=abcdef123456
-HASH_SALT=10
+DATABASE_CONNECTION_TIME_OUT=
+DATABASE_ACQUIRE_TIME_OUT=
+DATABASE_CONNECTION_LIMIT=
+CRYPTO_SECRET=
+CRYPTO_IV=
+CRYPTO_ALGORITHM=
+JWT_SECRET=
+HASH_SALT=
